Fix 1.18.2 UI labels and Forge client launch